--- a/myblog/package.json
+++ b/myblog/package.json
@@ -12,6 +12,7 @@
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-hey": "^0.4.1",
+    "hexo-migrator-wordpress": "^0.1.2",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
