--- a/myblog/_config.yml
+++ b/myblog/_config.yml
@@ -77,7 +77,9 @@ theme: material
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/kriaeth/kriaeth.github.io.git
+  branch: master
 
 # Admin
 admin: 
